Fix vertical spacing on menu items

--- a/resources/stylesheets/layout/_main-nav.scss
+++ b/resources/stylesheets/layout/_main-nav.scss
@@ -132,6 +132,7 @@
 }
 
 .main-nav__menu-item-container,
+.main-nav__list button,
 .main-nav__list a {
   position: relative;
   z-index: my.layer('default');
